<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/new_file"
        android:title="@string/new_file"
        android:icon="@drawable/ic_add"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/open"
        android:title="@string/open"
        android:icon="@drawable/ic_folder_open"
        app:showAsAction="never"
        />


    <item
        android:id="@+id/save"
        android:title="@string/save"
        android:icon="@drawable/ic_save"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/save_as"
        android:title="@string/save_as"
        android:icon="@drawable/ic_save_as"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/save_as_note"
        android:title="@string/save_as_note"
        android:icon="@drawable/ic_note"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/close"
        android:title="@string/close"
        android:icon="@drawable/ic_close"
        app:showAsAction="never"
        />
</menu>