<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/toolbox_toggle"
        android:enabled="true"
        android:title="@string/toolbox"
        android:icon="@drawable/ic_menu_open"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/save"
        android:enabled="true"
        android:title="@string/save"
        android:icon="@drawable/ic_save"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/search"
        android:enabled="true"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/open"
        android:enabled="true"
        android:title="@string/open"
        android:icon="@drawable/ic_folder_open"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/close"
        android:enabled="true"
        android:title="@string/close"
        android:icon="@drawable/ic_close"
        app:showAsAction="always"
        />

</menu>