<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/replace_all"
        android:title="@string/replace_all"
        android:icon="@drawable/ic_replace_all"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/replace"
        android:title="@string/replace"
        android:icon="@drawable/ic_replace"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/up"
        android:title="@string/up"
        android:icon="@drawable/ic_up"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/down"
        android:title="@string/down"
        android:icon="@drawable/ic_down"
        app:showAsAction="always"
        />

</menu>