<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/nav_up">
        <item
            android:id="@+id/textColor"
            android:icon="@drawable/ic_color_text"
            android:title="Text Color" />
        <item
            android:id="@+id/textFont"
            android:icon="@drawable/ic_font"
            android:title="Font" />

    </group>



    <group android:id="@+id/nav_top">
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/history" />
        <item
            android:id="@+id/nav_storage_manager"
            android:icon="@drawable/ic_storage_manager"
            android:title="@string/storage_manager" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_setting"
            android:title="@string/setting"/>
    </group>
    <group android:id="@+id/nav_bottom">
        <item
            android:id="@+id/nav_feedback"
            android:title="@string/feedback"
            android:icon="@drawable/ic_feedback"/>
    </group>
</menu>